--- a/RainbowFrameHoc/index.html
+++ b/RainbowFrameHoc/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
   <meta charset="utf-8" />
-  <title>Демо простого компонента</title>
+  <title>Rainbow Frame Hoc</Frame></title>
   <link rel="stylesheet" type="text/css" href="bundle.css">
 </head> 
 <body> 
